# cm-comps

./: README
bogus/: bogus.cabal  bogus.hs
bogus/Sound/Bogus/: Birth.hs  Common.hs  EndOfSummer.hs  Huh.hs  LostInTheWoods.hs  Scratch.hs  ShiveringAir.hs  VomitusMarinus.hs
bogus/Sound/Bogus/Birth/: Synthdefs.hs
bogus/Sound/Bogus/EndOfSummer/: Nodes.hs  Synthdefs.hs
bogus/Sound/Bogus/Huh/: Nodes.hs  Patterns.hs  Synthdefs.hs
bogus/Sound/Bogus/ShiveringAir/: Synthdefs.hs
hs-repl-server/: .dir-locals.el  hs-repl-server.cabal
hs-repl-server/emacs/: hs-repl.el
hs-repl-server/src/exec/: Main.hs
hs-repl-server/src/lib/Language/Haskell/REPL/: Callback.hs  Global.hs  Server.hs
hsc3-orphan/: hsc3-orphan.cabal
hsc3-orphan/src/lib/Sound/SC3/: Orphan.hs
hsc3-patch/: hsc3-patch.cabal
hsc3-patch/src/lib/Sound/SC3/: Patch.hs
hsrepl/: hsrepl.cabal
hsrepl/emacs/: hsrepl.el
hsrepl/src/lib/Language/Haskell/REPL/: Server.hs
monad-reload/: monad-reload.cabal
monad-reload/Control/Monad/: Reload.hs
replenish/: replenish.cabal
replenish/emacs/: replenish.el
replenish/src/: replenish.el
replenish/src/exec/: Main.hs
replenish/src/lib/Language/Haskell/Replenish/: Client.hs  Server.hs
study-for-a-pile-of-oscillators/: study-for-a-pile-of-oscillators.cabal
study-for-a-pile-of-oscillators/src/Sound/Study/ForAPileOfOscillators/: A001.hs  A002.hs  A003.hs  A004.hs  A005.hs  A006.hs  A007.hs  Common.hs  scratch_007_02.hs
study-for-noises-and-filters/: study-for-noises-and-filters.cabal
study-for-noises-and-filters/Sound/Study/ForNoisesAndFilters/: B001.hs  B003.hs  B004.hs  Scratch.hs  Scratch2.hs
study-for-noises-and-filters/Sound/Study/ForNoisesAndFilters/B002/: Node.hs  Synthdef.hs
study-for-noises-and-filters/run/: main.hs
study-for-port/: study-for-port.cabal
study-for-port/Sound/Study/Port/: AcidOtophilia.hs  ChuckOTF.hs  SPE.hs
study-for-porting/: study-for-porting.cabal
study-for-porting/Sound/Study/Porting/: AcidOtophilia.hs  ChuckOTF.hs  SPE.hs
study-for-synth-secrets/: study-for-synth-secrets.cabal
study-for-synth-secrets/src/Sound/Study/: ForSynthSecrets.hs
study-for-synth-secrets/src/Sound/Study/ForSynthSecrets/: Y1999.hs  Y2000.hs  Y2001.hs  Y2002.hs  Y2003.hs  Y2004.hs
study-for-user-interfaces/: study-for-user-interfaces.cabal
study-for-user-interfaces/data/: gui01.html
study-for-user-interfaces/data/buffer/: pat01.txt  pat02.txt  pat03.txt  pat04.txt
study-for-user-interfaces/data/static/css/: ui.css
study-for-user-interfaces/data/static/js/: ui.js
study-for-user-interfaces/src/exec/: gui.hs  gui01.hs  profile-tui02.hs  run.hs  simple-range.hs  simple-status.hs  simple-xy.hs
study-for-user-interfaces/src/lib/Graphics/UI/Threepenny/: Extra.hs
study-for-user-interfaces/src/lib/Session/: Session01.hs  Session02.hs  Session03.hs  Session04.hs  Session05.hs  Session06.hs  Session06b.hs  Synthdefs.hs
study-for-user-interfaces/src/lib/Sound/Study/ForUserInterfaces/: GUI01.hs  GUI02.hs  JS.hs  Misc.hs  Orphan.hs  PreSession.hs  Session01.hs  Session02.hs  Session03.hs  Session04.hs  Session05.hs  SimpleRange.hs  SimpleStatus.hs  SimpleXY.hs  TUI01.hs  TUI02.hs  TestSession.hs
study-for-user-interfaces/src/lib/Sound/Study/ForUserInterfaces/GUI/: GUI01.hs  GUI02.hs  JS.hs  SimpleRange.hs  SimpleStatus.hs  SimpleXY.hs
study-for-user-interfaces/src/lib/Sound/Study/ForUserInterfaces/Misc/: Demand.hs  NB.hs  PV.hs  PreSession.hs  PreSession02.hs  Scratch01.hs
study-for-user-interfaces/src/lib/Sound/Study/ForUserInterfaces/Scratch/: Demand.hs  DyreMain.hs  Emacs.hs  GhcAPI.hs  HintAPI.hs  NB.hs  OSCRec.hs  PV.hs  Plugins.hs  PolyMessage.hs  Polyvar.hs  PreSession.hs  PreSession02.hs  Re.hs  Reload.hs  Scratch01.hs  Threads.hs
study-for-user-interfaces/src/lib/Sound/Study/ForUserInterfaces/TUI/: TUI01.hs  TUI02.hs
