Name:                bogus
Version:             0.0.1
Synopsis:            bogus compositions
Description:         bogus compositions
License:             BSD3
License-file:        LICENSE
Author:              8c6794b6
Maintainer:          8c6794b6@gmail.com
Category:            Sound
Build-type:          Simple

Cabal-version:       >=1.2

Executable bogus
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -threaded
  main-is:
    bogus.hs
  build-depends:
    cmdargs >= 0.6.4

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
  exposed-modules:
    Sound.Bogus.Birth
    Sound.Bogus.Birth.Synthdefs
    Sound.Bogus.EndOfSummer
    Sound.Bogus.EndOfSummer.Synthdefs
    Sound.Bogus.Huh
    Sound.Bogus.Huh.Patterns
    Sound.Bogus.Huh.Nodes
    Sound.Bogus.Huh.Synthdefs
    Sound.Bogus.ShiveringAir
    Sound.Bogus.ShiveringAir.Synthdefs
  build-depends:
    base >= 2.0 && < 5.0,
    binary >= 0.5.0,
    bytestring -any,
    mtl >= 2.0.0,
    language-haskell-extract >= 0.2.0,
    hosc >= 0.11 && < 0.12,
    hsc3 >= 0.11 && < 0.12,
    hsc3-lepton >= 0.11.0 && < 0.12.0,
    random -any,
    zlib >= 0.5.3.1
