name:                replenish
version:             0.1.0.0
synopsis:            Yet another REPL server with GHC
description:         Yet another REPL server with GHC.

                     Has different behaviour than GHCi to support redefining
                     top-level functions and function callback by name.

license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Language.Haskell.Replenish.Client
                       Language.Haskell.Replenish.Server
  hs-source-dirs:      src/lib
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
  ghc-prof-options:    -auto-all
  build-depends:       base >= 4.6
                     , bytestring
                     , Cabal
                     , directory
                     , filepath
                     , ghc
                     , ghc-paths
                     , network
                     , transformers
                     , unix
                     , hosc

executable replenish
  main-is:             Main.hs
  hs-source-dirs:      src/exec
  ghc-options:         -Wall -threaded -rtsopts -O2
  build-depends:       base >=4.7 && <4.8
                     , replenish
  default-language:    Haskell2010
