Name:                study-for-noises-and-filters
Version:             0.0.1
Synopsis:            Study for noises and filters
Description:         Study for noises and filters
License:             BSD3
License-file:        LICENSE
Author:              8c6794b6
Maintainer:          8c6794b6@gmail.com
Category:            Sound
Build-type:          Simple

Cabal-version:       >=1.2

Executable sfnaf
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -threaded
  main-is:
    run/main.hs
  build-depends:
    cmdargs >= 0.6.4

Library
  ghc-options:
    -Wall
    -fno-warn-unused-do-bind
    -O2
  exposed-modules:
    Sound.Study.ForNoisesAndFilters.B001
    Sound.Study.ForNoisesAndFilters.B002.Node
    Sound.Study.ForNoisesAndFilters.B002.Synthdef
    Sound.Study.ForNoisesAndFilters.B003
    Sound.Study.ForNoisesAndFilters.B004
  build-depends:
    base >= 2.0 && < 5.0,
    containers -any,
    hosc >= 0.14,
    hsc3 >= 0.14,
    hsc3-lepton,
    hsc3-tree,
    random -any
