name:                study-for-synth-secrets
version:             0.1.0.0
synopsis:            Scratch codes writteh while reading Synth Secrets.
description:         /Synth Secrets/ was a series of articles in Sound On Sound
                     magazine. The series continued from May 1999 to July 2004.
                     This package contains scratch codes written while reading
                     the articles.
                     .
                     All articles could be accessed from:
                     <http://www.soundonsound.com/sos/allsynthsecrets.htm>

license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Sound.Study.ForSynthSecrets
                       Sound.Study.ForSynthSecrets.Y1999
                       Sound.Study.ForSynthSecrets.Y2000
                       Sound.Study.ForSynthSecrets.Y2001
                       Sound.Study.ForSynthSecrets.Y2002
                       Sound.Study.ForSynthSecrets.Y2003
  build-depends:       base >=4.6 && <4.7,
                       filepath,
                       hosc >= 0.14,
                       hsc3 >= 0.14,
                       hsc3-db >= 0.14,
                       hsc3-dot >= 0.14,
                       mtl,
                       transformers,
                       random,
                       random-shuffle
  hs-source-dirs:      src/
  default-language:    Haskell2010
  ghc-options:         -Wall