name:                study-for-user-interfaces
version:             0.1.0.0
synopsis:            Experimental codes for user intefaces.
description:         Experimental codes for realtime audio performance
                     user interface.
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

data-dir:            data
extra-source-files:  data/static/css/ui.css
                     data/static/js/ui.js
                     data/buffer/*.txt

library
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -Wall
  exposed-modules:   Graphics.UI.Threepenny.Extra
                     Sound.Study.ForUserInterfaces.SimpleRange
                     Sound.Study.ForUserInterfaces.SimpleStatus
                     Sound.Study.ForUserInterfaces.SimpleXY
                     Sound.Study.ForUserInterfaces.GUI01
                     Sound.Study.ForUserInterfaces.GUI02
                     Sound.Study.ForUserInterfaces.TUI01
                     Sound.Study.ForUserInterfaces.JS
                     Sound.Study.ForUserInterfaces.Session01
                     Sound.Study.ForUserInterfaces.Session02
                     Sound.Study.ForUserInterfaces.Session03
                     Paths_study_for_user_interfaces
  build-depends:     base >=4.6
                   , containers
                   , filepath
                   , hosc >= 0.14
                   , hsc3 >= 0.14
                   , hsc3-db
                   , hsc3-lang
                   , hsc3-supply
                   , hsc3-th
                   , hsc3-tree
                   , mtl
                   , random
                   , threepenny-gui
                   , transformers

executable ui-run
  main-is:           run.hs
  hs-source-dirs:    src/exec
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts
  build-depends:     base >= 4.6
                   , study-for-user-interfaces
