name:                study-for-user-interfaces
version:             0.1.0.0
synopsis:            Experimental codes for user intefaces.
description:         Experimental codes for realtime audio performance
                     user interface.
license:             BSD3
license-file:        LICENSE
author:              8c6794b6
maintainer:          8c6794b6@gmail.com
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

data-dir:            data
extra-source-files:  data/static/css/ui.css
                     data/static/js/ui.js
                     data/buffer/*.txt

library
  hs-source-dirs:    src/lib
  default-language:  Haskell2010
  ghc-options:       -Wall
  ghc-prof-options:  -auto-all
  exposed-modules:   Graphics.UI.Threepenny.Extra
                     Sound.Study.ForUserInterfaces.GUI.SimpleRange
                     Sound.Study.ForUserInterfaces.GUI.SimpleStatus
                     Sound.Study.ForUserInterfaces.GUI.SimpleXY
                     Sound.Study.ForUserInterfaces.GUI.GUI01
                     Sound.Study.ForUserInterfaces.GUI.GUI02
                     Sound.Study.ForUserInterfaces.GUI.JS
                     Sound.Study.ForUserInterfaces.TUI.TUI01
                     Sound.Study.ForUserInterfaces.TUI.TUI02
                     Sound.Study.ForUserInterfaces.Orphan
                     Paths_study_for_user_interfaces
  other-modules:     Session.Session01
                     Session.Session02
                     Session.Session03
                     Session.Session04
                     Session.Session05
  build-depends:     base >=4.6
                   , containers
                   , filepath
                   , hashable
                   , hosc >= 0.14
                   , hsc3 >= 0.14
                   , hsc3-db
                   , hsc3-lang
                   , hsc3-supply
                   , hsc3-th
                   , hsc3-tree
                   , mtl
                   , murmur-hash
                   , random
                   , threepenny-gui
                   , transformers

executable gui
  main-is:           gui.hs
  hs-source-dirs:    src/exec
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts
  build-depends:     base >= 4.6
                   , study-for-user-interfaces

executable profile-tui02
  main-is:           profile-tui02.hs
  hs-source-dirs:    src/exec
  default-language:  Haskell2010
  ghc-options:       -Wall -threaded -rtsopts
  build-depends:     base >= 4.6
                   , hsc3
                   , hosc
                   , study-for-user-interfaces
